# src/api/api.go
@@ -48,6 +48,9 @@ func RegisterRouters(r *gin.Engine, cfg *config.Config) {
 
 			countries := v1.Group("/countries", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 			routers.Countries(countries, cfg)
+
+			cities := v1.Group("/cities", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+			routers.Cities(cities, cfg)
 		}
 	}
 }
